# heike

./: CLAUDE.md  CODE_REVIEW.md  Cargo.toml  FIXES.md  PREVIEW_ARCHITECTURE.md  README.md  Roadmap.md  fix_refactoring.sh
examples/: convert_icon.rs
src/: app.rs  app.rs.bak  config.rs  entry.rs  input.rs  layout.rs  main.rs  message.rs  style.rs
src/io/: directory.rs  mod.rs  ops.rs  search.rs  worker.rs
src/model/: clipboard.rs  entry.rs  mod.rs  mode.rs
src/state/: clipboard.rs  entries.rs  mod.rs  mode.rs  mode_state.rs  navigation.rs  search.rs  selection.rs  sort.rs  tabs.rs  ui.rs
src/style/: mod.rs  theme.rs
src/subscription/: keyboard.rs  mod.rs  watcher.rs
src/view/: mod.rs  modals.rs  panels.rs  panels.rs.bak  preview.rs  preview_legacy.rs.bak
src/view/preview/: handler.rs  mod.rs  registry.rs
src/view/preview/handlers/: archive.rs  audio.rs  binary.rs  directory.rs  image.rs  markdown.rs  mod.rs  office.rs  pdf.rs  text.rs
