[package]
name = "heike"
version = "0.6.0"
edition = "2021"

[dependencies]
eframe = "0.33.2" # Main GUI framework
egui_extras = { version = "0.33.2", features = ["all_loaders"] } # For tables/images
chrono = "0.4"    # For file timestamps
open = "5.3"      # To open files with system default
directories = "5.0" # To find Home directory
bytesize = "1.3"  # For human readable file sizes
image = "0.25"    # For loading icon
resvg = "0.45"    # For SVG to PNG conversion (dev tool)
usvg = "0.45"     # SVG parsing (dev tool)
tiny-skia = "0.11" # Rasterization (dev tool)
notify = "7.0"    # For file system watching
syntect = "5.2"  # For syntax highlighting
pulldown-cmark = "0.12" # For markdown rendering
zip = "2.2"      # For ZIP archive preview
tar = "0.4"      # For TAR archive preview
flate2 = "1.0"   # For gzip decompression
id3 = "1.14"     # For audio metadata
lopdf = "0.34"   # For PDF metadata reading