[package]
name = "heike"
version = "0.8.0-alpha"
edition = "2021"

[dependencies]
# Core iced GUI framework
iced = { version = "0.13", features = ["image", "svg", "tokio", "highlighter"] }
iced_aw = "0.11"  # Additional widgets (tabs, menu, split)

# Async runtime
tokio = { version = "1.41", features = ["full"] }

# File management
chrono = "0.4"
directories = "6.0"
bytesize = "1.3"
notify = "7.0"
image = "0.25"
open = "5.3"

# Preview support
syntect = "5.2"
pulldown-cmark = "0.12"
zip = "2.2"
tar = "0.4"
flate2 = "1.1"
id3 = "1.14"
lopdf = "0.36"
calamine = "0.32"
docx-rs = "0.4"

# Search functionality
grep-searcher = "0.1"
grep-regex = "0.1"
ignore = "0.4"
rayon = "1.10"